--- a/codebase/Lionfish.Productivity.MsBuildTools/Ratcheter/Ratcheter.csproj
+++ b/codebase/Lionfish.Productivity.MsBuildTools/Ratcheter/Ratcheter.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ratchet.cs" />
     <Compile Include="Verifyer.cs" />
+    <Compile Include="XmlHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="files\DirectInput.testproj" />
