--- a/codebase/Lionfish.Productivity.MsBuildTools/RatcheterTests/RatcheterTests.csproj
+++ b/codebase/Lionfish.Productivity.MsBuildTools/RatcheterTests/RatcheterTests.csproj
@@ -47,7 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ParaneterTests.cs" />
+    <Compile Include="CheckerTests.cs" />
+    <Compile Include="ParameterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RatchetTests.cs" />
     <Compile Include="VerifyerTests.cs" />
