--- a/codebase/Lionfish.Productivity.MsBuildTools/Ratcheter/Ratcheter.csproj
+++ b/codebase/Lionfish.Productivity.MsBuildTools/Ratcheter/Ratcheter.csproj
@@ -49,10 +49,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IChecker.cs" />
     <Compile Include="LogProxy.cs" />
     <Compile Include="Parameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ratchet.cs" />
+    <Compile Include="TowardsHundredChecker.cs" />
+    <Compile Include="TowardsZeroChecker.cs" />
     <Compile Include="Verifyer.cs" />
     <Compile Include="XmlHandler.cs" />
   </ItemGroup>
