unstable checkin just for keeping it together

--- a/codebase/Lionfish.Productivity.MsBuildTools/Ratcheter/Ratcheter.csproj
+++ b/codebase/Lionfish.Productivity.MsBuildTools/Ratcheter/Ratcheter.csproj
@@ -58,6 +58,7 @@
     <Compile Include="TowardsZeroChecker.cs" />
     <Compile Include="Verifyer.cs" />
     <Compile Include="XmlHandler.cs" />
+    <Compile Include="XmlValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="files\DirectInput.testproj" />
