--- a/codebase/Lionfish.Productivity.MsBuildTools/RatcheterTests/RatcheterTests.csproj
+++ b/codebase/Lionfish.Productivity.MsBuildTools/RatcheterTests/RatcheterTests.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RatchetTests.cs" />
     <Compile Include="VerifyerTests.cs" />
+    <Compile Include="XmlHandlerIntegrationTests.cs" />
+    <Compile Include="XmlValidatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
