--- a/codebase/Lionfish.Productivity.MsBuildTools/Ratcheter/Ratcheter.csproj
+++ b/codebase/Lionfish.Productivity.MsBuildTools/Ratcheter/Ratcheter.csproj
@@ -52,6 +52,8 @@
     <Compile Include="IChecker.cs" />
     <Compile Include="LogProxy.cs" />
     <Compile Include="Parameter.cs" />
+    <Compile Include="Project.cs" />
+    <Compile Include="ProjectList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ratchet.cs" />
     <Compile Include="TowardsHundredChecker.cs" />
@@ -62,6 +64,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="files\DirectInput.testproj" />
+    <None Include="files\TargetValues.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="files\TestFile.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -70,6 +75,9 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="files\Out.xml" />
+    <Content Include="files\TargetValues_test.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="files\TestFile.xml" />
     <Content Include="files\TestFile_empty.xml" />
   </ItemGroup>
