--- a/codebase/Lionfish.Productivity.MsBuildTools/RatcheterTests/RatcheterTests.csproj
+++ b/codebase/Lionfish.Productivity.MsBuildTools/RatcheterTests/RatcheterTests.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="CheckerTests.cs" />
     <Compile Include="ParameterTests.cs" />
+    <Compile Include="ProjectListTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RatchetTests.cs" />
     <Compile Include="VerifyerTests.cs" />
